<resources>
    <string name="app_name">CookyAlpha</string>
    <string name="open_drawer">Open menu</string>
    <string name="close_drawer">Close menu</string>

    <string name="likes">Likes</string>

    <string name="recipe_name_label">Name</string>
    <string name="recipe_name_hint">Recipe name</string>
    <string name="recipe_description_label">Description</string>
    <string name="recipe_description_hint">Recipe description</string>
    <string name="recipe_category_label">Category</string>
    <string name="recipe_people_label">For People</string>
    <string name="recipe_preview_image">Preview Image</string>
    <string name="select">Select</string>

    <string name="ingredient_property_name">Name</string>
    <string name="ingredient_property_name_hint">Sugar</string>
    <string name="ingredient_property_amt">Amount</string>
    <string name="ingredient_property_amt_hint">1 tea spoon</string>
    <string name="ingredient_submit">Submit</string>
    <string name="ingredient_delete">Delete</string>

    <string name="procedure_description">Description</string>
    <string name="procedure_description_hint">fill water to bottle</string>
    <string name="menu_create">Create</string>
    <string name="menu_log_out">Log out</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="facebook_app_id">360089194461380</string>
    <string name="fb_login_protocol_scheme">fb360089194461380</string>

    <string name="following">Followings</string>
    <string name="follower">Followers</string>

    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>

</resources>
