<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/spacing">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/NormalText.Dark"
            android:text="@string/ingredient_property_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/inner_padding"/>
        <EditText
            android:id="@+id/et_name"
            style="@style/Header2.Dark"
            android:textColorHint="@color/text_light_L4"
            android:hint="@string/ingredient_property_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/NormalText.Dark"
            android:text="@string/ingredient_property_amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/inner_padding"/>
        <EditText
            android:id="@+id/et_amt"
            style="@style/Header2.Dark"
            android:textColorHint="@color/text_light_L4"
            android:hint="@string/ingredient_property_amt_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>