<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkBackground">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/inner_padding">
                <TextView
                    android:text="@string/recipe_name_label"
                    style="@style/NormalText.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/et_name"
                    android:backgroundTint="@color/indicator_selected"
                    android:hint="@string/recipe_name_hint"
                    android:textColorHint="@color/text_light_L4"
                    style="@style/Header2.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/inner_padding">
                <TextView
                    android:text="@string/recipe_description_label"
                    style="@style/NormalText.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/et_description"
                    android:backgroundTint="@color/indicator_selected"
                    android:hint="@string/recipe_description_hint"
                    android:textColorHint="@color/text_light_L4"
                    style="@style/Header2.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/inner_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/NormalText.Light"
                    android:text="@string/recipe_category_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:background="@drawable/shape_rounded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Spinner
                        android:id="@+id/spin_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </Spinner>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/NormalText.Light"
                    android:text="@string/recipe_preview_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <cs.sci.ku.cookyalpha.views.RatioImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/iv_preview"
                    android:adjustViewBounds="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn_select"
                    android:backgroundTint="@color/indicator_selected"
                    android:text="@string/select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>