<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_procedure"
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:text="@string/select"
                android:id="@+id/btn_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/NormalText.Dark"
                android:text="@string/procedure_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                style="@style/Header2.Dark"
                android:id="@+id/et_description"
                android:textColorHint="@color/text_light_L4"
                android:hint="@string/procedure_description_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>